--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "العيش في {nameaddress}",
   "{numberKilometers}_{unit}_away": "{numberkilometers} {unit} بعيدا",
   "verified": "تم التحقق",
-  "HeartLink": "heartlink",
+  "heartLink": "heartlink",
   "don't_worry_-_we_won't_tell_this_person": "لا تقلق - لن نخبر هذا الشخص",
   "finding_people_near_you...": "العثور على أشخاص بالقرب منك ...",
   "let's_be_friend": "دعونا نكون صديق",
@@ -292,5 +292,27 @@
   "online_now": "متواجد حاليا",
   "like": "يحب",
   "nope": "لا",
-  "supper_like": "العشاء مثل"
+  "supper_like": "العشاء مثل",
+  "add_living": "أضف المعيشة",
+  "99+_like": "99+ مثل",
+  "for_you": "لك",
+  "create_new": "خلق جديد إبداع جديد",
+  "months": "شهور",
+  "usd/months": "دولار أمريكي/شهور",
+  "sale": "أُوكَازيُون",
+  "recuring_billing,_cancel_anytime": "توقيت الفواتير ، إلغاء في أي وقت",
+  "sale_50%": "بيع 50 ٪",
+  "get_read_receipt": "احصل على استلام القراءة",
+  "supper_likes": "العشاء يحب",
+  "5_free_supper_like_weekly_": "5 عشاء مجاني مثل أسبوعي",
+  "or": "أو",
+  "coming_soon": "قريباً",
+  "all_too_well_(taylor's_version)": "جيد جدًا (نسخة تايلور)",
+  "taylor_swift": "تايلور سويفت",
+  "delete": "يمسح",
+  "get_platinum_package": "احصل على حزمة البلاتين",
+  "usd/each": "USD/لكل منهما",
+  "get_gold_package": "احصل على حزمة الذهب",
+  "search_language": "لغة البحث",
+  "please_provide_more_details_about_what_you_are_reporting": "يرجى تقديم المزيد من التفاصيل حول ما تقوم بالإبلاغ عنه"
 }
