--- a/src/locales/ca.json
+++ b/src/locales/ca.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "En directe a {nameaddress}",
   "{numberKilometers}_{unit}_away": "{numberKilomeTers} {unitat} fora",
   "verified": "Verificat",
-  "HeartLink": "Enllaç de cor",
+  "heartLink": "Enllaç de cor",
   "don't_worry_-_we_won't_tell_this_person": "No us preocupeu: no ho direm a aquesta persona",
   "finding_people_near_you...": "Trobar gent a prop teu ...",
   "let's_be_friend": "Siguem amic",
@@ -292,5 +292,27 @@
   "online_now": "En línia ara",
   "like": "M'AGRADA",
   "nope": "Nota",
-  "supper_like": "Sopar com"
+  "supper_like": "Sopar com",
+  "add_living": "Afegir viu",
+  "99+_like": "99+ com",
+  "for_you": "Per a tu",
+  "create_new": "Crea un nou",
+  "months": "mesos",
+  "usd/months": "USD/mesos",
+  "sale": "Rebaixa",
+  "recuring_billing,_cancel_anytime": "Recurrència de facturació, cancel·la en qualsevol moment",
+  "sale_50%": "Venda del 50%",
+  "get_read_receipt": "Obteniu el rebut de la lectura",
+  "supper_likes": "El sopar li agrada",
+  "5_free_supper_like_weekly_": "5 Sopar gratuït com setmanalment",
+  "or": "O",
+  "coming_soon": "Pròximament",
+  "all_too_well_(taylor's_version)": "Molt bé (versió de Taylor)",
+  "taylor_swift": "Taylor Swift",
+  "delete": "Esborrar",
+  "get_platinum_package": "Obteniu paquet de platí",
+  "usd/each": "USD/cadascun",
+  "get_gold_package": "Obteniu paquet d'or",
+  "search_language": "Llenguatge de cerca",
+  "please_provide_more_details_about_what_you_are_reporting": "Proporcioneu més detalls sobre el que informeu"
 }
