--- a/src/locales/da.json
+++ b/src/locales/da.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "Live at {NameAddress}",
   "{numberKilometers}_{unit}_away": "{NumberKilometers} {enhed} væk",
   "verified": "Verificeret",
-  "HeartLink": "Hjertelink",
+  "heartLink": "Hjertelink",
   "don't_worry_-_we_won't_tell_this_person": "Bare rolig - vi fortæller ikke denne person",
   "finding_people_near_you...": "At finde folk i nærheden af ​​dig ...",
   "let's_be_friend": "Lad os være venner",
@@ -292,5 +292,27 @@
   "online_now": "Online nu",
   "like": "SYNES GODT OM",
   "nope": "NIX",
-  "supper_like": "Aftensmad kan lide"
+  "supper_like": "Aftensmad kan lide",
+  "add_living": "Tilføj levende",
+  "99+_like": "99+ som",
+  "for_you": "For dig",
+  "create_new": "Lav ny",
+  "months": "måneder",
+  "usd/months": "USD/måneder",
+  "sale": "Salg",
+  "recuring_billing,_cancel_anytime": "Recuring Billing, annuller når som helst",
+  "sale_50%": "Salg 50%",
+  "get_read_receipt": "Få læst kvittering",
+  "supper_likes": "Aftensmad kan lide",
+  "5_free_supper_like_weekly_": "5 Gratis aftensmad som ugentligt",
+  "or": "ELLER",
+  "coming_soon": "Kommer snart",
+  "all_too_well_(taylor's_version)": "Alt for godt (Taylor's version)",
+  "taylor_swift": "Taylor Swift",
+  "delete": "Slet",
+  "get_platinum_package": "Få platinpakke",
+  "usd/each": "USD/hver",
+  "get_gold_package": "Få guldpakke",
+  "search_language": "Søgningsprog",
+  "please_provide_more_details_about_what_you_are_reporting": "Giv flere detaljer om, hvad du rapporterer"
 }
