--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "Lebe bei {nameaddress}",
   "{numberKilometers}_{unit}_away": "{Numberkilometer} {Einheit} weg",
   "verified": "Verifiziert",
-  "HeartLink": "Herzverbindung",
+  "heartLink": "Herzverbindung",
   "don't_worry_-_we_won't_tell_this_person": "Mach dir keine Sorgen - wir werden es dieser Person nicht sagen",
   "finding_people_near_you...": "Leute in deiner Nähe finden ...",
   "let's_be_friend": "Lass uns Freunde sein",
@@ -292,5 +292,27 @@
   "online_now": "Jetzt online",
   "like": "WIE",
   "nope": "NÖ",
-  "supper_like": "Abendessen wie"
+  "supper_like": "Abendessen wie",
+  "add_living": "Fügen Sie das Leben hinzu",
+  "99+_like": "99+ mögen",
+  "for_you": "Für dich",
+  "create_new": "Erstelle neu",
+  "months": "Monate",
+  "usd/months": "USD/Monate",
+  "sale": "Verkauf",
+  "recuring_billing,_cancel_anytime": "Rechnungsrechnung wiederholen, jederzeit stornieren",
+  "sale_50%": "Verkauf 50%",
+  "get_read_receipt": "Holen Sie sich Lesebeleg",
+  "supper_likes": "Abendessen mag",
+  "5_free_supper_like_weekly_": "5 kostenloses Abendessen wie wöchentlich",
+  "or": "ODER",
+  "coming_soon": "Demnächst",
+  "all_too_well_(taylor's_version)": "Nur zu gut (Taylors Version)",
+  "taylor_swift": "Taylor Swift",
+  "delete": "LÖSCHEN",
+  "get_platinum_package": "Holen Sie sich Platinpaket",
+  "usd/each": "USD/jeweils",
+  "get_gold_package": "Holen Sie sich Goldpaket",
+  "search_language": "Suchsprache",
+  "please_provide_more_details_about_what_you_are_reporting": "Bitte geben Sie weitere Details zur Berichterstattung an, was Sie berichten"
 }
