--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "Ζήστε στο {Nameaddress}",
   "{numberKilometers}_{unit}_away": "{numberKilometers} {Unit} μακριά",
   "verified": "Επαληθευμένος",
-  "HeartLink": "Καρδιακή σύνδεση",
+  "heartLink": "Καρδιακή σύνδεση",
   "don't_worry_-_we_won't_tell_this_person": "Μην ανησυχείτε - δεν θα πούμε σε αυτό το άτομο",
   "finding_people_near_you...": "Βρίσκοντας ανθρώπους κοντά σας ...",
   "let's_be_friend": "Ας γίνουμε φίλοι",
@@ -292,5 +292,27 @@
   "online_now": "Συνδεδεμένος τώρα",
   "like": "ΑΡΕΣΕΙ",
   "nope": "ΟΧΙ",
-  "supper_like": "Δείπνο"
+  "supper_like": "Δείπνο",
+  "add_living": "Προσθέστε διαβίωση",
+  "99+_like": "99+ σαν",
+  "for_you": "Για σενα",
+  "create_new": "Δημιουργία νέου",
+  "months": "μήνες",
+  "usd/months": "USD/μήνες",
+  "sale": "Πώληση",
+  "recuring_billing,_cancel_anytime": "Ανακάλυψη χρέωσης, ακυρώστε ανά πάσα στιγμή",
+  "sale_50%": "Πώληση 50%",
+  "get_read_receipt": "Λάβετε απόδειξη ανάγνωσης",
+  "supper_likes": "Το δείπνο αρέσει",
+  "5_free_supper_like_weekly_": "5 Ελεύθερο δείπνο σαν εβδομαδιαία",
+  "or": "Ή",
+  "coming_soon": "Ερχομαι συντομα",
+  "all_too_well_(taylor's_version)": "Πολύ καλά (έκδοση του Taylor)",
+  "taylor_swift": "Taylor Swift",
+  "delete": "ΔΙΑΓΡΑΦΩ",
+  "get_platinum_package": "Λήψη πακέτου πλατίνας",
+  "usd/each": "USD/το καθένα",
+  "get_gold_package": "Λήψη χρυσού πακέτου",
+  "search_language": "Γλώσσα αναζήτησης",
+  "please_provide_more_details_about_what_you_are_reporting": "Δώστε περισσότερες λεπτομέρειες σχετικά με το τι αναφέρετε"
 }
