--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "Vivir en {nameaddress}",
   "{numberKilometers}_{unit}_away": "{numberKilometers} {unidad} de distancia",
   "verified": "Verificado",
-  "HeartLink": "Heartlink",
+  "heartLink": "Heartlink",
   "don't_worry_-_we_won't_tell_this_person": "No te preocupes, no le diremos a esta persona",
   "finding_people_near_you...": "Encontrar gente cerca de ti ...",
   "let's_be_friend": "Seamos amigos",
@@ -292,5 +292,27 @@
   "online_now": "En línea ahora",
   "like": "COMO",
   "nope": "NO",
-  "supper_like": "Cenar como"
+  "supper_like": "Cenar como",
+  "add_living": "Agregar vida",
+  "99+_like": "99+ como",
+  "for_you": "Para ti",
+  "create_new": "Crear nuevo",
+  "months": "meses",
+  "usd/months": "USD/meses",
+  "sale": "Venta",
+  "recuring_billing,_cancel_anytime": "Filado de la facturación, cancele en cualquier momento",
+  "sale_50%": "Venta 50%",
+  "get_read_receipt": "Obtenga el recibo de lectura",
+  "supper_likes": "La cena le gusta",
+  "5_free_supper_like_weekly_": "5 cena gratis como semanal",
+  "or": "O",
+  "coming_soon": "Muy pronto",
+  "all_too_well_(taylor's_version)": "Muy bien (versión de Taylor)",
+  "taylor_swift": "Taylor Swift",
+  "delete": "BORRAR",
+  "get_platinum_package": "Obtener el paquete de platino",
+  "usd/each": "USD/cada uno",
+  "get_gold_package": "Obtener el paquete de oro",
+  "search_language": "Lenguaje de búsqueda",
+  "please_provide_more_details_about_what_you_are_reporting": "Proporcione más detalles sobre lo que está informando"
 }
