--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "Elää {nameaddress}",
   "{numberKilometers}_{unit}_away": "{NumberKilometers} {yksikkö}",
   "verified": "Varmennettu",
-  "HeartLink": "Sydänsolku",
+  "heartLink": "Sydänsolku",
   "don't_worry_-_we_won't_tell_this_person": "Älä huoli - emme kerro tälle henkilölle",
   "finding_people_near_you...": "Löydä ihmisiä lähelläsi ...",
   "let's_be_friend": "Ollaan ystäviä",
@@ -292,5 +292,27 @@
   "online_now": "Nyt online-tilassa",
   "like": "KUTEN",
   "nope": "Ei",
-  "supper_like": "Illallinen kuten"
+  "supper_like": "Illallinen kuten",
+  "add_living": "Lisätä eläviä",
+  "99+_like": "99+ kuten",
+  "for_you": "Sinulle",
+  "create_new": "Luo uusi",
+  "months": "kuukaudet",
+  "usd/months": "USD/Kuukausia",
+  "sale": "Myynti",
+  "recuring_billing,_cancel_anytime": "Laskutus, peruuta milloin tahansa",
+  "sale_50%": "Myynti 50%",
+  "get_read_receipt": "Hanki lue kuitti",
+  "supper_likes": "Illallinen tykkää",
+  "5_free_supper_like_weekly_": "5 ilmaista illallista kuten viikoittain",
+  "or": "TAI",
+  "coming_soon": "Tulossa pian",
+  "all_too_well_(taylor's_version)": "Aivan liian hyvin (Taylorin versio)",
+  "taylor_swift": "Taylor Swift",
+  "delete": "POISTAA",
+  "get_platinum_package": "Hanki platinapaketti",
+  "usd/each": "USD/jokainen",
+  "get_gold_package": "Hanki kultapaketti",
+  "search_language": "Hakukieli",
+  "please_provide_more_details_about_what_you_are_reporting": "Anna lisätietoja siitä, mitä ilmoitat"
 }
