--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "Vivre à {nameaddress}",
   "{numberKilometers}_{unit}_away": "{NumberKilomètres} {unité} loin",
   "verified": "Vérifié",
-  "HeartLink": "Liaison de cœur",
+  "heartLink": "Liaison de cœur",
   "don't_worry_-_we_won't_tell_this_person": "Ne t'inquiète pas - nous ne dirons pas à cette personne",
   "finding_people_near_you...": "Trouver des gens près de chez vous ...",
   "let's_be_friend": "Soyons amis",
@@ -292,5 +292,27 @@
   "online_now": "Maintenant en ligne",
   "like": "COMME",
   "nope": "NON",
-  "supper_like": "Souper comme"
+  "supper_like": "Souper comme",
+  "add_living": "Ajouter la vie",
+  "99+_like": "99+ comme",
+  "for_you": "Pour toi",
+  "create_new": "Créer un nouveau",
+  "months": "mois",
+  "usd/months": "USD / mois",
+  "sale": "Vente",
+  "recuring_billing,_cancel_anytime": "Récupérer la facturation, annuler à tout moment",
+  "sale_50%": "Vente 50%",
+  "get_read_receipt": "Obtenir un reçu de lecture",
+  "supper_likes": "Souper aime",
+  "5_free_supper_like_weekly_": "5 souper gratuit comme hebdomadaire",
+  "or": "OU",
+  "coming_soon": "À venir",
+  "all_too_well_(taylor's_version)": "Trop bien (version de Taylor)",
+  "taylor_swift": "Taylor Swift",
+  "delete": "SUPPRIMER",
+  "get_platinum_package": "Obtenez un forfait Platinum",
+  "usd/each": "USD / chacun",
+  "get_gold_package": "Obtenez un forfait Gold",
+  "search_language": "Langue de recherche",
+  "please_provide_more_details_about_what_you_are_reporting": "Veuillez fournir plus de détails sur ce que vous signalez"
 }
