--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "{Nameaddress} पर रहते हैं",
   "{numberKilometers}_{unit}_away": "{NumberKilometers} {यूनिट} दूर",
   "verified": "सत्यापित",
-  "HeartLink": "हार्टलिंक",
+  "heartLink": "हार्टलिंक",
   "don't_worry_-_we_won't_tell_this_person": "चिंता न करें - हम इस व्यक्ति को नहीं बताएंगे",
   "finding_people_near_you...": "आप के पास लोगों को ढूंढना ...",
   "let's_be_friend": "चलो दोस्त बन जाएं",
@@ -292,5 +292,27 @@
   "online_now": "अब ऑनलाइन हैं",
   "like": "पसंद",
   "nope": "नहीं",
-  "supper_like": "की तरह"
+  "supper_like": "की तरह",
+  "add_living": "लिविंग जोड़ें",
+  "99+_like": "99+ की तरह",
+  "for_you": "आपके लिए",
+  "create_new": "नया निर्माण",
+  "months": "महीने",
+  "usd/months": "USD/महीने",
+  "sale": "बिक्री",
+  "recuring_billing,_cancel_anytime": "बिलिंग को प्राप्त करना, कभी भी रद्द करें",
+  "sale_50%": "बिक्री 50%",
+  "get_read_receipt": "रसीद प्राप्त करें",
+  "supper_likes": "सपर लाइक",
+  "5_free_supper_like_weekly_": "साप्ताहिक की तरह 5 मुक्त रात",
+  "or": "या",
+  "coming_soon": "जल्द आ रहा है",
+  "all_too_well_(taylor's_version)": "ऑल टू वेल (टेलर का संस्करण)",
+  "taylor_swift": "टेलर स्विफ्ट",
+  "delete": "मिटाना",
+  "get_platinum_package": "प्लैटिनम पैकेज प्राप्त करें",
+  "usd/each": "USD/प्रत्येक",
+  "get_gold_package": "गोल्ड पैकेज प्राप्त करें",
+  "search_language": "खोज भाषा",
+  "please_provide_more_details_about_what_you_are_reporting": "कृपया आप जो रिपोर्ट कर रहे हैं उसके बारे में अधिक जानकारी प्रदान करें"
 }
