--- a/src/locales/hr.json
+++ b/src/locales/hr.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "Živjeti na {nameaddress}",
   "{numberKilometers}_{unit}_away": "{numbilometers} {jedinica} daleko",
   "verified": "Provjeren",
-  "HeartLink": "Srčana veza",
+  "heartLink": "Srčana veza",
   "don't_worry_-_we_won't_tell_this_person": "Ne brinite - nećemo reći ovoj osobi",
   "finding_people_near_you...": "Pronalaženje ljudi u vašoj blizini ...",
   "let's_be_friend": "Budimo prijatelji",
@@ -292,5 +292,27 @@
   "online_now": "Na mreži sada",
   "like": "KAO",
   "nope": "Ne",
-  "supper_like": "Večera poput"
+  "supper_like": "Večera poput",
+  "add_living": "Dodaj Living",
+  "99+_like": "99+ kao",
+  "for_you": "Za tebe",
+  "create_new": "Stvorite novo",
+  "months": "mjeseci",
+  "usd/months": "USD/mjeseci",
+  "sale": "Prodaja",
+  "recuring_billing,_cancel_anytime": "Povrat naplate, otkažite bilo kada",
+  "sale_50%": "Prodaja 50%",
+  "get_read_receipt": "Pročitajte potvrdu",
+  "supper_likes": "Večera voli",
+  "5_free_supper_like_weekly_": "5 besplatna večera poput tjedna",
+  "or": "ILI",
+  "coming_soon": "Dolazi uskoro",
+  "all_too_well_(taylor's_version)": "Previše dobro (Taylorova verzija)",
+  "taylor_swift": "Taylor Swift",
+  "delete": "IZBRISATI",
+  "get_platinum_package": "Nabavite platinski paket",
+  "usd/each": "USD/svaki",
+  "get_gold_package": "Dobiti zlatni paket",
+  "search_language": "Jezik pretraživanja",
+  "please_provide_more_details_about_what_you_are_reporting": "Navedite više detalja o onome što prijavljujete"
 }
