--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -103,7 +103,7 @@
   "skip_the_queue": "Lewati antrian",
   "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "Selalu di profil teratas di area Anda selama 30 menit untuk mendapatkan lebih banyak kecocokan",
   "boost_my_profile": "Meningkatkan profil saya",
-  "get_a_gold_package": "Dapatkan Paket Emas",
+  "get_a_gold_package": "Dapatkan paket emas",
   "5_free_supper_like_weekly": "5 Perjamuan Gratis Seperti Mingguan",
   "get_supper_likes_package": "Dapatkan paket Supper Likes",
   "stand_out_with_super_like": "Menonjol dengan sangat suka",
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "Tinggal di {nameaddress}",
   "{numberKilometers}_{unit}_away": "{numberKilometer} {unit} jauh",
   "verified": "Diverifikasi",
-  "HeartLink": "Heartlink",
+  "heartLink": "Heartlink",
   "don't_worry_-_we_won't_tell_this_person": "Jangan khawatir - kami tidak akan memberi tahu orang ini",
   "finding_people_near_you...": "Menemukan orang di dekat Anda ...",
   "let's_be_friend": "Mari kita menjadi teman",
@@ -292,5 +292,27 @@
   "online_now": "Sekarang online",
   "like": "MENYUKAI",
   "nope": "TIDAK",
-  "supper_like": "Suka makan malam"
+  "supper_like": "Suka makan malam",
+  "add_living": "Tambahkan hidup",
+  "99+_like": "99+ suka",
+  "for_you": "Untukmu",
+  "create_new": "Membuat baru",
+  "months": "bulan",
+  "usd/months": "USD/bulan",
+  "sale": "Penjualan",
+  "recuring_billing,_cancel_anytime": "Memaksakan penagihan, batal kapan saja",
+  "sale_50%": "Jual 50%",
+  "get_read_receipt": "Dapatkan tanda terima baca",
+  "supper_likes": "Suka makan malam",
+  "5_free_supper_like_weekly_": "5 Perjamuan Gratis Seperti Mingguan",
+  "or": "ATAU",
+  "coming_soon": "Segera hadir",
+  "all_too_well_(taylor's_version)": "Sayang sekali (versi Taylor)",
+  "taylor_swift": "Taylor Swift",
+  "delete": "MENGHAPUS",
+  "get_platinum_package": "Dapatkan paket platinum",
+  "usd/each": "USD/masing -masing",
+  "get_gold_package": "Dapatkan paket emas",
+  "search_language": "Bahasa pencarian",
+  "please_provide_more_details_about_what_you_are_reporting": "Harap berikan detail lebih lanjut tentang apa yang Anda laporkan"
 }
