--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "Live at {nameaddress}",
   "{numberKilometers}_{unit}_away": "{NumberKilometers} {unità} di distanza",
   "verified": "Verificato",
-  "HeartLink": "Cuore di cuore",
+  "heartLink": "Cuore di cuore",
   "don't_worry_-_we_won't_tell_this_person": "Non preoccuparti, non lo diremo a questa persona",
   "finding_people_near_you...": "Trovare persone vicino a te ...",
   "let's_be_friend": "Diventiamo amici",
@@ -292,5 +292,27 @@
   "online_now": "Online adesso",
   "like": "COME",
   "nope": "NO",
-  "supper_like": "Cena come"
+  "supper_like": "Cena come",
+  "add_living": "Aggiungi la vita",
+  "99+_like": "99+ come",
+  "for_you": "Per te",
+  "create_new": "Creare nuovo",
+  "months": "mesi",
+  "usd/months": "USD/MESI",
+  "sale": "Vendita",
+  "recuring_billing,_cancel_anytime": "RECLURA DI BIFFAGGIO, Annulla in qualsiasi momento",
+  "sale_50%": "Vendita 50%",
+  "get_read_receipt": "Ottieni la ricevuta di lettura",
+  "supper_likes": "Mi piace alla cena",
+  "5_free_supper_like_weekly_": "5 cena gratuita come settimanalmente",
+  "or": "O",
+  "coming_soon": "Prossimamente",
+  "all_too_well_(taylor's_version)": "Troppo bene (versione di Taylor)",
+  "taylor_swift": "Taylor Swift",
+  "delete": "ELIMINARE",
+  "get_platinum_package": "Ottieni pacchetto platino",
+  "usd/each": "USD/ciascuno",
+  "get_gold_package": "Ottieni un pacchetto d'oro",
+  "search_language": "Lingua di ricerca",
+  "please_provide_more_details_about_what_you_are_reporting": "Fornisci maggiori dettagli su ciò che stai segnalando"
 }
