--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "{nameaddress}に住んでいます",
   "{numberKilometers}_{unit}_away": "{numberkilometers} {unit} ofay",
   "verified": "検証",
-  "HeartLink": "ハートリンク",
+  "heartLink": "ハートリンク",
   "don't_worry_-_we_won't_tell_this_person": "心配しないでください - 私たちはこの人に伝えません",
   "finding_people_near_you...": "あなたの近くの人を見つける...",
   "let's_be_friend": "友達になろう",
@@ -292,5 +292,27 @@
   "online_now": "今オンラインです",
   "like": "好き",
   "nope": "いいえ",
-  "supper_like": "夕食のように"
+  "supper_like": "夕食のように",
+  "add_living": "生活を追加します",
+  "99+_like": "99+ wike",
+  "for_you": "あなたのために",
+  "create_new": "新しく作る",
+  "months": "数ヶ月",
+  "usd/months": "USD/月",
+  "sale": "セール",
+  "recuring_billing,_cancel_anytime": "請求の再下、いつでもキャンセルします",
+  "sale_50%": "販売50％",
+  "get_read_receipt": "領収書を読んでください",
+  "supper_likes": "夕食は好きです",
+  "5_free_supper_like_weekly_": "5週間のような5つの無料の夕食",
+  "or": "また",
+  "coming_soon": "近日公開",
+  "all_too_well_(taylor's_version)": "あまりにもうまく（テイラーのバージョン）",
+  "taylor_swift": "テイラー・スウィフト",
+  "delete": "消去",
+  "get_platinum_package": "プラチナパッケージを入手してください",
+  "usd/each": "USD/それぞれ",
+  "get_gold_package": "ゴールドパッケージを入手してください",
+  "search_language": "言語を検索します",
+  "please_provide_more_details_about_what_you_are_reporting": "あなたが報告しているものの詳細を提供してください"
 }
