--- a/src/locales/ms.json
+++ b/src/locales/ms.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "Hidup di {nameaddress}",
   "{numberKilometers}_{unit}_away": "{NumberKilometers} {Unit} Away",
   "verified": "Disahkan",
-  "HeartLink": "Heartlink",
+  "heartLink": "Heartlink",
   "don't_worry_-_we_won't_tell_this_person": "Jangan risau - kami tidak akan memberitahu orang ini",
   "finding_people_near_you...": "Mencari orang berhampiran anda ...",
   "let's_be_friend": "Mari berkawan",
@@ -292,5 +292,27 @@
   "online_now": "Dalam talian sekarang",
   "like": "Seperti",
   "nope": "Nope",
-  "supper_like": "Makan malam seperti"
+  "supper_like": "Makan malam seperti",
+  "add_living": "Tambah hidup",
+  "99+_like": "99+ suka",
+  "for_you": "Untuk anda",
+  "create_new": "Buat baru",
+  "months": "bulan",
+  "usd/months": "USD/Bulan",
+  "sale": "Jualan",
+  "recuring_billing,_cancel_anytime": "Mengembalikan pengebilan, batalkan bila -bila masa",
+  "sale_50%": "Jualan 50%",
+  "get_read_receipt": "Dapatkan resit baca",
+  "supper_likes": "Makan malam suka",
+  "5_free_supper_like_weekly_": "5 Perjamuan Percuma Seperti Mingguan",
+  "or": "Atau",
+  "coming_soon": "Akan datang",
+  "all_too_well_(taylor's_version)": "Semuanya baik (versi Taylor)",
+  "taylor_swift": "Taylor Swift",
+  "delete": "Padam",
+  "get_platinum_package": "Dapatkan Pakej Platinum",
+  "usd/each": "USD/setiap",
+  "get_gold_package": "Dapatkan pakej emas",
+  "search_language": "Bahasa cari",
+  "please_provide_more_details_about_what_you_are_reporting": "Sila berikan lebih banyak maklumat mengenai apa yang anda laporkan"
 }
