--- a/src/locales/nb.json
+++ b/src/locales/nb.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "Bor på {nameAddress}",
   "{numberKilometers}_{unit}_away": "{tallekilometre} {enhet} bort",
   "verified": "Bekreftet",
-  "HeartLink": "Heartlink",
+  "heartLink": "Heartlink",
   "don't_worry_-_we_won't_tell_this_person": "Ikke bekymre deg - vi vil ikke fortelle denne personen",
   "finding_people_near_you...": "Finne mennesker i nærheten ...",
   "let's_be_friend": "La oss være venn",
@@ -292,5 +292,27 @@
   "online_now": "På nett nå",
   "like": "SOM",
   "nope": "NEI",
-  "supper_like": "Kveldsmat som"
+  "supper_like": "Kveldsmat som",
+  "add_living": "Legg til å leve",
+  "99+_like": "99+ som",
+  "for_you": "For deg",
+  "create_new": "Lag ny",
+  "months": "måneder",
+  "usd/months": "USD/måneder",
+  "sale": "Salg",
+  "recuring_billing,_cancel_anytime": "Resering av fakturering, avbryt når som helst",
+  "sale_50%": "Salg 50%",
+  "get_read_receipt": "Bli les kvittering",
+  "supper_likes": "Kveldsmat liker",
+  "5_free_supper_like_weekly_": "5 gratis kveldsmat som ukentlig",
+  "or": "ELLER",
+  "coming_soon": "Kommer snart",
+  "all_too_well_(taylor's_version)": "Alt for godt (Taylors versjon)",
+  "taylor_swift": "Taylor Swift",
+  "delete": "Slett",
+  "get_platinum_package": "Få Platinum -pakke",
+  "usd/each": "USD/hver",
+  "get_gold_package": "Få gullpakke",
+  "search_language": "Søkespråk",
+  "please_provide_more_details_about_what_you_are_reporting": "Gi mer informasjon om hva du rapporterer"
 }
