--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "Leef bij {NameAddress}",
   "{numberKilometers}_{unit}_away": "{Numberkilometers} {eenheid} weg",
   "verified": "Geverifieerd",
-  "HeartLink": "Hartverschiet",
+  "heartLink": "Hartverschiet",
   "don't_worry_-_we_won't_tell_this_person": "Maak je geen zorgen - we zullen deze persoon niet vertellen",
   "finding_people_near_you...": "Mensen bij je in de buurt vinden ...",
   "let's_be_friend": "Laten we vrienden zijn",
@@ -292,5 +292,27 @@
   "online_now": "Nu online",
   "like": "LEUK VINDEN",
   "nope": "NEE",
-  "supper_like": "Avondmaal lijken"
+  "supper_like": "Avondmaal lijken",
+  "add_living": "Voeg het leven toe",
+  "99+_like": "99+ Like",
+  "for_you": "Voor jou",
+  "create_new": "Maak nieuw",
+  "months": "maanden",
+  "usd/months": "USD/maanden",
+  "sale": "Verkoop",
+  "recuring_billing,_cancel_anytime": "Het herhalen van facturering, annuleren op elk moment",
+  "sale_50%": "Verkoop 50%",
+  "get_read_receipt": "Krijg leesbewijs",
+  "supper_likes": "Avondmaal vindt het leuk",
+  "5_free_supper_like_weekly_": "5 gratis avondmaal zoals wekelijks",
+  "or": "OF",
+  "coming_soon": "Binnenkort beschikbaar",
+  "all_too_well_(taylor's_version)": "Maar al te goed (de versie van Taylor)",
+  "taylor_swift": "Taylor Swift",
+  "delete": "VERWIJDEREN",
+  "get_platinum_package": "Krijg Platinum -pakket",
+  "usd/each": "USD/elk",
+  "get_gold_package": "Krijg goudpakket",
+  "search_language": "Doorzoektaal",
+  "please_provide_more_details_about_what_you_are_reporting": "Geef meer informatie over wat u meldt"
 }
