--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "Na żywo w {NameAddress}",
   "{numberKilometers}_{unit}_away": "{numerKilometers} {jednostka}",
   "verified": "Zweryfikowane",
-  "HeartLink": "Link Heart",
+  "heartLink": "Link Heart",
   "don't_worry_-_we_won't_tell_this_person": "Nie martw się - nie powiemy tej osobie",
   "finding_people_near_you...": "Znalezienie ludzi w pobliżu ...",
   "let's_be_friend": "Zostańmy przyjaciółmi",
@@ -292,5 +292,27 @@
   "online_now": "Teraz online",
   "like": "TAK JAK",
   "nope": "NIE",
-  "supper_like": "Kolacja jak"
+  "supper_like": "Kolacja jak",
+  "add_living": "Dodaj życie",
+  "99+_like": "99+ jak",
+  "for_you": "Dla Ciebie",
+  "create_new": "Tworzyć nowe",
+  "months": "miesiące",
+  "usd/months": "USD/miesiące",
+  "sale": "Sprzedaż",
+  "recuring_billing,_cancel_anytime": "Ogólność faktur, anuluj w dowolnym momencie",
+  "sale_50%": "Sprzedaż 50%",
+  "get_read_receipt": "Uzyskaj odczyt paragonu",
+  "supper_likes": "Kolacja lubi",
+  "5_free_supper_like_weekly_": "5 Darmowa kolacja jak tydzień",
+  "or": "LUB",
+  "coming_soon": "Wkrótce",
+  "all_too_well_(taylor's_version)": "Zbyt dobrze (wersja Taylora)",
+  "taylor_swift": "Taylor Swift",
+  "delete": "USUWAĆ",
+  "get_platinum_package": "Zdobądź pakiet platynowy",
+  "usd/each": "USD/każdy",
+  "get_gold_package": "Zdobądź pakiet złota",
+  "search_language": "Wyszukaj język",
+  "please_provide_more_details_about_what_you_are_reporting": "Podaj więcej szczegółów na temat tego, co zgłaszasz"
 }
