--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "Viva em {nameaddress}",
   "{numberKilometers}_{unit}_away": "{numberkilometers} {unidade} fora",
   "verified": "Verificado",
-  "HeartLink": "Heartlink",
+  "heartLink": "Heartlink",
   "don't_worry_-_we_won't_tell_this_person": "Não se preocupe - não vamos contar a essa pessoa",
   "finding_people_near_you...": "Encontrando pessoas perto de você ...",
   "let's_be_friend": "Vamos ser amigos",
@@ -292,5 +292,27 @@
   "online_now": "Online agora",
   "like": "COMO",
   "nope": "NÃO",
-  "supper_like": "Ceia como"
+  "supper_like": "Ceia como",
+  "add_living": "Adicione viva",
+  "99+_like": "99+ como",
+  "for_you": "Para você",
+  "create_new": "Crie um novo",
+  "months": "meses",
+  "usd/months": "USD/meses",
+  "sale": "Oferta",
+  "recuring_billing,_cancel_anytime": "Recorrendo cobrança, cancelar a qualquer momento",
+  "sale_50%": "Venda 50%",
+  "get_read_receipt": "Obtenha o recibo de leitura",
+  "supper_likes": "A ceia gosta",
+  "5_free_supper_like_weekly_": "5 Ceia grátis como semanal",
+  "or": "OU",
+  "coming_soon": "Em breve",
+  "all_too_well_(taylor's_version)": "Muito bem (versão de Taylor)",
+  "taylor_swift": "Taylor Swift",
+  "delete": "EXCLUIR",
+  "get_platinum_package": "Obtenha o pacote de platina",
+  "usd/each": "USD/cada",
+  "get_gold_package": "Obtenha pacote de ouro",
+  "search_language": "Linguagem de pesquisa",
+  "please_provide_more_details_about_what_you_are_reporting": "Forneça mais detalhes sobre o que você está relatando"
 }
