--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "Trăiește la {nameaddress}",
   "{numberKilometers}_{unit}_away": "{numberkilometers} {unitate} departe",
   "verified": "Verificat",
-  "HeartLink": "Lanta de inimă",
+  "heartLink": "Lanta de inimă",
   "don't_worry_-_we_won't_tell_this_person": "Nu vă faceți griji - nu vom spune această persoană",
   "finding_people_near_you...": "Găsirea oamenilor lângă tine ...",
   "let's_be_friend": "Hai sa fim prieteni",
@@ -292,5 +292,27 @@
   "online_now": "Online acum",
   "like": "CA",
   "nope": "NU",
-  "supper_like": "Cina ca"
+  "supper_like": "Cina ca",
+  "add_living": "Adăugați traiul",
+  "99+_like": "99+ ca",
+  "for_you": "Pentru dumneavoastră",
+  "create_new": "Creaza nou",
+  "months": "luni",
+  "usd/months": "USD/luni",
+  "sale": "Vânzare",
+  "recuring_billing,_cancel_anytime": "Recuperarea facturării, anulați oricând",
+  "sale_50%": "Vânzare 50%",
+  "get_read_receipt": "Obțineți chitanță de citire",
+  "supper_likes": "Cina îi place",
+  "5_free_supper_like_weekly_": "5 cină liberă ca săptămânal",
+  "or": "SAU",
+  "coming_soon": "In curand",
+  "all_too_well_(taylor's_version)": "All Too Well (versiunea lui Taylor)",
+  "taylor_swift": "Taylor Swift",
+  "delete": "ȘTERGE",
+  "get_platinum_package": "Obțineți pachetul de platină",
+  "usd/each": "USD/fiecare",
+  "get_gold_package": "Obțineți pachet de aur",
+  "search_language": "Limba de căutare",
+  "please_provide_more_details_about_what_you_are_reporting": "Vă rugăm să furnizați mai multe detalii despre ceea ce raportați"
 }
