--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -103,7 +103,7 @@
   "skip_the_queue": "Пропустите очередь",
   "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "Всегда в верхнем профиле в вашем районе в течение 30 минут, чтобы получить больше совпадений",
   "boost_my_profile": "Повысить мой профиль",
-  "get_a_gold_package": "Получить золотой пакет",
+  "get_a_gold_package": "Получите золотой пакет",
   "5_free_supper_like_weekly": "5 свободный ужин, как еженедельно",
   "get_supper_likes_package": "Получить пакет ужина любит",
   "stand_out_with_super_like": "Отличаться от супер",
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "Живи в {nameaddress}",
   "{numberKilometers}_{unit}_away": "{numberKilometers} {Unit} прочь",
   "verified": "Проверенный",
-  "HeartLink": "Сердцевязки",
+  "heartLink": "Сердцевязки",
   "don't_worry_-_we_won't_tell_this_person": "Не волнуйся - мы не скажем этому человеку",
   "finding_people_near_you...": "Поиск людей рядом с вами ...",
   "let's_be_friend": "Давай будем друзьями",
@@ -292,5 +292,27 @@
   "online_now": "Сейчас в сети",
   "like": "НРАВИТЬСЯ",
   "nope": "НЕА",
-  "supper_like": "Ужин, как"
+  "supper_like": "Ужин, как",
+  "add_living": "Добавить жизнь",
+  "99+_like": "99+ нравится",
+  "for_you": "Для тебя",
+  "create_new": "Создавать новое",
+  "months": "месяцы",
+  "usd/months": "Доллар США/месяцы",
+  "sale": "Распродажа",
+  "recuring_billing,_cancel_anytime": "УДАЛИВАЕТСЯ СИТИНГ, отмените в любое время",
+  "sale_50%": "Продажа 50%",
+  "get_read_receipt": "Получите квитанцию",
+  "supper_likes": "Участок любит",
+  "5_free_supper_like_weekly_": "5 свободный ужин, как еженедельно",
+  "or": "ИЛИ",
+  "coming_soon": "Вскоре",
+  "all_too_well_(taylor's_version)": "Слишком хорошо (версия Тейлора)",
+  "taylor_swift": "Тэйлор Свифт",
+  "delete": "УДАЛИТЬ",
+  "get_platinum_package": "Получите платиновый пакет",
+  "usd/each": "USD/каждый",
+  "get_gold_package": "Получите золотой пакет",
+  "search_language": "Язык поиска",
+  "please_provide_more_details_about_what_you_are_reporting": "Пожалуйста, предоставьте более подробную информацию о том, что вы сообщаете"
 }
