--- a/src/locales/sk.json
+++ b/src/locales/sk.json
@@ -97,7 +97,7 @@
   "stay_up_to_date": "Zostaňte v aktuálnom stave",
   "know_when_your_messages_have_been_read_with_read_receipt": "Vedieť, kedy boli vaše správy čítané s potvrdením o čítaní",
   "most_popular": "NAJPOPULÁRNEJŠÍ",
-  "read_receipt": "Potvrdenie",
+  "read_receipt": "Doklad o prečítaní",
   "recurring_billing,_cancel_anytime": "Opakujúce sa fakturácie, zrušte kedykoľvek",
   "get_boost_package": "Získajte podporu balíka",
   "skip_the_queue": "Preskočte front",
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "Live at {NameDress}",
   "{numberKilometers}_{unit}_away": "{numberkilometers} {jednotka} ďalej",
   "verified": "Overený",
-  "HeartLink": "Srdcový odkaz",
+  "heartLink": "Srdcový odkaz",
   "don't_worry_-_we_won't_tell_this_person": "Nerobte si starosti - nebudeme to povedať",
   "finding_people_near_you...": "Nájdenie ľudí vo vašom okolí ...",
   "let's_be_friend": "Buďme priatelia",
@@ -292,5 +292,27 @@
   "online_now": "Online teraz",
   "like": "PÁČI SA MI TO",
   "nope": "NIE",
-  "supper_like": "Večera"
+  "supper_like": "Večera",
+  "add_living": "Pridať bývanie",
+  "99+_like": "99+ ako",
+  "for_you": "Pre teba",
+  "create_new": "Vytvor nový",
+  "months": "mesiace",
+  "usd/months": "USD/mesiace",
+  "sale": "zľava",
+  "recuring_billing,_cancel_anytime": "Rekurzia fakturácie, zrušte kedykoľvek",
+  "sale_50%": "Predaj 50%",
+  "get_read_receipt": "Získajte doklad o prečítaní",
+  "supper_likes": "Večera má rád",
+  "5_free_supper_like_weekly_": "5 bezplatná večera ako týždenník",
+  "or": "Alebo",
+  "coming_soon": "Už čoskoro",
+  "all_too_well_(taylor's_version)": "Až príliš dobre (Taylorova verzia)",
+  "taylor_swift": "Taylor Swift",
+  "delete": "Vymazať",
+  "get_platinum_package": "Získajte platinový balíček",
+  "usd/each": "USD/každý",
+  "get_gold_package": "Získajte zlatý balík",
+  "search_language": "Výhľad",
+  "please_provide_more_details_about_what_you_are_reporting": "Uveďte ďalšie podrobnosti o tom, čo hlásíte"
 }
