--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "Live på {nameaddress}",
   "{numberKilometers}_{unit}_away": "{NumberKilometers} {enhet} bort",
   "verified": "Verifierad",
-  "HeartLink": "Hjärtlänk",
+  "heartLink": "Hjärtlänk",
   "don't_worry_-_we_won't_tell_this_person": "Oroa dig inte - vi kommer inte att berätta för den här personen",
   "finding_people_near_you...": "Hitta människor nära dig ...",
   "let's_be_friend": "Låt oss vara vän",
@@ -292,5 +292,27 @@
   "online_now": "Online nu",
   "like": "TYCKA OM",
   "nope": "Napp",
-  "supper_like": "Kvällsmat"
+  "supper_like": "Kvällsmat",
+  "add_living": "Lägg till levande",
+  "99+_like": "99+ som",
+  "for_you": "Till dig",
+  "create_new": "Skapa ny",
+  "months": "månad",
+  "usd/months": "USD/månader",
+  "sale": "Försäljning",
+  "recuring_billing,_cancel_anytime": "Återställa fakturering, avbryt när som helst",
+  "sale_50%": "Försäljning 50%",
+  "get_read_receipt": "Läs kvitto",
+  "supper_likes": "Kvällsmat gillar",
+  "5_free_supper_like_weekly_": "5 gratis kvällsmat som varje vecka",
+  "or": "ELLER",
+  "coming_soon": "Kommer snart",
+  "all_too_well_(taylor's_version)": "Alltför bra (Taylor's version)",
+  "taylor_swift": "Taylor Swift",
+  "delete": "RADERA",
+  "get_platinum_package": "Få platina -paket",
+  "usd/each": "USD/var och en",
+  "get_gold_package": "Få guldpaket",
+  "search_language": "Sökspråk",
+  "please_provide_more_details_about_what_you_are_reporting": "Ange mer information om vad du rapporterar"
 }
