--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "อยู่ที่ {nameaddress}",
   "{numberKilometers}_{unit}_away": "{numberkilometers} {หน่วย} ออกไป",
   "verified": "ตรวจสอบแล้ว",
-  "HeartLink": "heartlink",
+  "heartLink": "heartlink",
   "don't_worry_-_we_won't_tell_this_person": "ไม่ต้องกังวล - เราจะไม่บอกคนนี้",
   "finding_people_near_you...": "หาคนที่อยู่ใกล้คุณ ...",
   "let's_be_friend": "มาเป็นเพื่อนกันเถอะ",
@@ -292,5 +292,27 @@
   "online_now": "ออนไลน์ตอนนี้",
   "like": "ชอบ",
   "nope": "ไม่",
-  "supper_like": "อาหารมื้อเย็นชอบ"
+  "supper_like": "อาหารมื้อเย็นชอบ",
+  "add_living": "เพิ่มการใช้ชีวิต",
+  "99+_like": "99+ ชอบ",
+  "for_you": "สำหรับคุณ",
+  "create_new": "สร้างใหม่",
+  "months": "เดือน",
+  "usd/months": "USD/เดือน",
+  "sale": "ขาย",
+  "recuring_billing,_cancel_anytime": "การเรียกเก็บเงินเพื่อยกเลิกได้ตลอดเวลา",
+  "sale_50%": "ขาย 50%",
+  "get_read_receipt": "รับใบเสร็จอ่าน",
+  "supper_likes": "ชอบอาหารมื้อเย็น",
+  "5_free_supper_like_weekly_": "5 อาหารมื้อเย็นฟรีทุกสัปดาห์",
+  "or": "หรือ",
+  "coming_soon": "เร็วๆ นี้",
+  "all_too_well_(taylor's_version)": "ดีเกินไป (เวอร์ชันของเทย์เลอร์)",
+  "taylor_swift": "Taylor Swift",
+  "delete": "ลบ",
+  "get_platinum_package": "รับแพ็คเกจแพลตตินัม",
+  "usd/each": "USD/แต่ละ",
+  "get_gold_package": "รับแพ็คเกจทองคำ",
+  "search_language": "ภาษาค้นหา",
+  "please_provide_more_details_about_what_you_are_reporting": "โปรดให้รายละเอียดเพิ่มเติมเกี่ยวกับสิ่งที่คุณกำลังรายงาน"
 }
