--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "{Nameaddress}",
   "{numberKilometers}_{unit}_away": "{NumberKilometers} {Unit} Away",
   "verified": "Doğrulanmış",
-  "HeartLink": "Heartlink",
+  "heartLink": "Heartlink",
   "don't_worry_-_we_won't_tell_this_person": "Endişelenme - bu kişiye söylemeyeceğiz",
   "finding_people_near_you...": "Yakınınızdaki insanları bulmak ...",
   "let's_be_friend": "Arkadaş olalım",
@@ -292,5 +292,27 @@
   "online_now": "Şu an çevrim içi",
   "like": "BEĞENMEK",
   "nope": "HAYIR",
-  "supper_like": "Akşam Yemeği"
+  "supper_like": "Akşam Yemeği",
+  "add_living": "Yaşamak eklemek",
+  "99+_like": "99+",
+  "for_you": "Senin için",
+  "create_new": "Yeni oluşturmak",
+  "months": "aylar",
+  "usd/months": "USD/Ay",
+  "sale": "Satış",
+  "recuring_billing,_cancel_anytime": "Faturalandırmayı yeniden kullanmak, istediğiniz zaman iptal edin",
+  "sale_50%": "Satış% 50",
+  "get_read_receipt": "Okuma makbuzu al",
+  "supper_likes": "Akşam Yemeği Seviyor",
+  "5_free_supper_like_weekly_": "Haftalık gibi 5 ücretsiz akşam yemeği",
+  "or": "VEYA",
+  "coming_soon": "Yakında gelecek",
+  "all_too_well_(taylor's_version)": "Çok iyi (Taylor'ın versiyonu)",
+  "taylor_swift": "Taylor Swift",
+  "delete": "SİLMEK",
+  "get_platinum_package": "Platin Paketi Alın",
+  "usd/each": "USD/Her biri",
+  "get_gold_package": "Altın Paketi Alın",
+  "search_language": "Arama dili",
+  "please_provide_more_details_about_what_you_are_reporting": "Lütfen rapor ettiğiniz hakkında daha fazla bilgi verin"
 }
