--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "Жити на {nameaddress}",
   "{numberKilometers}_{unit}_away": "{numberKilometers} {одиниця}",
   "verified": "Перевірений",
-  "HeartLink": "Серцева лінія",
+  "heartLink": "Серцева лінія",
   "don't_worry_-_we_won't_tell_this_person": "Не хвилюйся - ми не скажемо цій людині",
   "finding_people_near_you...": "Пошук людей поблизу вас ...",
   "let's_be_friend": "Будьмо другом",
@@ -292,5 +292,27 @@
   "online_now": "В Інтернеті зараз",
   "like": "ЛЮБЛЮ",
   "nope": "Нія",
-  "supper_like": "Вечеря як"
+  "supper_like": "Вечеря як",
+  "add_living": "Додайте життя",
+  "99+_like": "99+",
+  "for_you": "Для вас",
+  "create_new": "Створити новий",
+  "months": "місяці",
+  "usd/months": "USD/місяці",
+  "sale": "Розпродаж",
+  "recuring_billing,_cancel_anytime": "РОБОТА ПЛАТУВАННЯ, Скасуйте в будь -який час",
+  "sale_50%": "Продаж 50%",
+  "get_read_receipt": "Отримайте квитанцію про читання",
+  "supper_likes": "Вечеря подобається",
+  "5_free_supper_like_weekly_": "5 безкоштовна вечеря, як щотижня",
+  "or": "Або",
+  "coming_soon": "Незабаром",
+  "all_too_well_(taylor's_version)": "Занадто добре (версія Тейлора)",
+  "taylor_swift": "Тейлор Свіфт",
+  "delete": "Видаляти",
+  "get_platinum_package": "Отримайте платиновий пакет",
+  "usd/each": "USD/кожен",
+  "get_gold_package": "Отримайте золотий пакет",
+  "search_language": "Мови пошуку",
+  "please_provide_more_details_about_what_you_are_reporting": "Будь ласка, надайте детальніше про те, про що ви повідомляєте"
 }
