--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -244,9 +244,9 @@
   "km": "km",
   "mi": "mi",
   "live_at_{nameAddress}": "Trực tiếp tại {nameaddress}",
-  "{numberKilometers}_{unit}_away": "{numberKilometer} {đơn vị}",
+  "{numberKilometers}_{unit}_away": "{numberKilometers} {unit}",
   "verified": "Đã xác minh",
-  "HeartLink": "Liên kết trái tim",
+  "heartLink": "Liên kết trái tim",
   "don't_worry_-_we_won't_tell_this_person": "Đừng lo lắng - chúng tôi sẽ không nói với người này",
   "finding_people_near_you...": "Tìm mọi người gần bạn ...",
   "let's_be_friend": "Hãy là bạn",
@@ -292,5 +292,27 @@
   "online_now": "Trực tuyến ngay bây giờ",
   "like": "GIỐNG",
   "nope": "KHÔNG",
-  "supper_like": "Bữa ăn tối như"
+  "supper_like": "Bữa ăn tối như",
+  "add_living": "Thêm cuộc sống",
+  "99+_like": "99+ Thích",
+  "for_you": "Cho bạn",
+  "create_new": "Tạo mới",
+  "months": "tháng",
+  "usd/months": "USD/tháng",
+  "sale": "Doanh thu",
+  "recuring_billing,_cancel_anytime": "Nhận lại hóa đơn, hủy bất cứ lúc nào",
+  "sale_50%": "Bán 50%",
+  "get_read_receipt": "Nhận được biên lai đọc",
+  "supper_likes": "Bữa ăn tối thích",
+  "5_free_supper_like_weekly_": "5 Bữa tối miễn phí như hàng tuần",
+  "or": "HOẶC",
+  "coming_soon": "Sắp ra mắt",
+  "all_too_well_(taylor's_version)": "Tất cả đều quá tốt (phiên bản của Taylor)",
+  "taylor_swift": "Taylor Swift",
+  "delete": "XÓA BỎ",
+  "get_platinum_package": "Nhận gói bạch kim",
+  "usd/each": "USD/mỗi",
+  "get_gold_package": "Nhận gói vàng",
+  "search_language": "Ngôn ngữ tìm kiếm",
+  "please_provide_more_details_about_what_you_are_reporting": "Vui lòng cung cấp thêm chi tiết về những gì bạn đang báo cáo"
 }
