--- a/src/locales/zh-rCN.json
+++ b/src/locales/zh-rCN.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "住在{nameaddress}",
   "{numberKilometers}_{unit}_away": "{numberKilometers} {unit}远离",
   "verified": "经过验证",
-  "HeartLink": "心链接",
+  "heartLink": "心链接",
   "don't_worry_-_we_won't_tell_this_person": "别担心 - 我们不会告诉这个人",
   "finding_people_near_you...": "在你附近找到人...",
   "let's_be_friend": "我们交朋友吧",
@@ -292,5 +292,27 @@
   "online_now": "现在在线",
   "like": "喜欢",
   "nope": "没有",
-  "supper_like": "晚餐喜欢"
+  "supper_like": "晚餐喜欢",
+  "add_living": "增加生活",
+  "99+_like": "99+喜欢",
+  "for_you": "为你",
+  "create_new": "创建新的",
+  "months": "月份",
+  "usd/months": "美元/月",
+  "sale": "销售",
+  "recuring_billing,_cancel_anytime": "恢复计费，随时取消",
+  "sale_50%": "销售50％",
+  "get_read_receipt": "获取读取收据",
+  "supper_likes": "吃水喜欢",
+  "5_free_supper_like_weekly_": "5个免费晚餐，例如每周",
+  "or": "或者",
+  "coming_soon": "即将推出",
+  "all_too_well_(taylor's_version)": "一切都很好（泰勒的版本）",
+  "taylor_swift": "泰勒斯威夫特",
+  "delete": "删除",
+  "get_platinum_package": "获取铂金包",
+  "usd/each": "美元/每个",
+  "get_gold_package": "获取黄金包",
+  "search_language": "搜索语言",
+  "please_provide_more_details_about_what_you_are_reporting": "请提供有关您报告的内容的更多详细信息"
 }
