--- a/src/locales/zh-rTW.json
+++ b/src/locales/zh-rTW.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "住在{nameaddress}",
   "{numberKilometers}_{unit}_away": "{numberKilometers} {unit}遠離",
   "verified": "經過驗證",
-  "HeartLink": "心鏈接",
+  "heartLink": "心鏈接",
   "don't_worry_-_we_won't_tell_this_person": "別擔心 - 我們不會告訴這個人",
   "finding_people_near_you...": "在你附近找到人...",
   "let's_be_friend": "我們交朋友吧",
@@ -292,5 +292,27 @@
   "online_now": "現在在線",
   "like": "喜歡",
   "nope": "沒有",
-  "supper_like": "晚餐喜歡"
+  "supper_like": "晚餐喜歡",
+  "add_living": "增加生活",
+  "99+_like": "99+喜歡",
+  "for_you": "為你",
+  "create_new": "創建新的",
+  "months": "月份",
+  "usd/months": "美元/月",
+  "sale": "銷售",
+  "recuring_billing,_cancel_anytime": "恢復計費，隨時取消",
+  "sale_50%": "銷售50％",
+  "get_read_receipt": "獲取讀取收據",
+  "supper_likes": "吃水喜歡",
+  "5_free_supper_like_weekly_": "5個免費晚餐，例如每週",
+  "or": "或者",
+  "coming_soon": "即將推出",
+  "all_too_well_(taylor's_version)": "一切都很好（泰勒的版本）",
+  "taylor_swift": "泰勒斯威夫特",
+  "delete": "刪除",
+  "get_platinum_package": "獲取鉑金包",
+  "usd/each": "美元/每個",
+  "get_gold_package": "獲取黃金包",
+  "search_language": "搜索語言",
+  "please_provide_more_details_about_what_you_are_reporting": "請提供有關您報告的內容的更多詳細信息"
 }
