--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -292,5 +292,27 @@
   "online_now": "Online now",
   "like": "LIKE",
   "nope": "NOPE",
-  "supper_like": "SUPPER LIKE"
+  "supper_like": "SUPPER LIKE",
+  "add_living": "Add living",
+  "99+_like": "99+ like",
+  "for_you": "For you",
+  "create_new": "Create New",
+  "months": "months",
+  "usd/months": "USD/Months",
+  "sale": "Sale",
+  "recuring_billing,_cancel_anytime": "Recuring billing, cancel anytime",
+  "sale_50%": "Sale 50%",
+  "get_read_receipt": "GET READ RECEIPT",
+  "supper_likes": "Supper likes",
+  "5_free_supper_like_weekly_": "5 free Supper Like weekly",
+  "or": "OR",
+  "coming_soon": "Coming soon",
+  "all_too_well_(taylor's_version)": "All Too Well (Taylor's Version)",
+  "taylor_swift": "Taylor Swift",
+  "delete": "DELETE",
+  "get_platinum_package": "Get Platinum Package",
+  "usd/each": "USD/each",
+  "get_gold_package": "Get Gold Package",
+  "search_language": "Search Language",
+  "please_provide_more_details_about_what_you_are_reporting": "Please provide more details about what you are reporting"
 }
