--- a/src/locales/hu.json
+++ b/src/locales/hu.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "Éljen a {nameaddress} oldalon",
   "{numberKilometers}_{unit}_away": "{numberKilometers} {egység} Away",
   "verified": "Igazolt",
-  "HeartLink": "Szívlánc",
+  "heartLink": "Szívlánc",
   "don't_worry_-_we_won't_tell_this_person": "Ne aggódj - nem mondjuk el ezt a személyt",
   "finding_people_near_you...": "Találni az embereket a közelben ...",
   "let's_be_friend": "Legyünk barátok",
@@ -292,5 +292,27 @@
   "online_now": "Online most",
   "like": "MINT",
   "nope": "DEHOGY",
-  "supper_like": "Vacsora hasonló"
+  "supper_like": "Vacsora hasonló",
+  "add_living": "Add hozzá a megélhetést",
+  "99+_like": "99+ kedvelő",
+  "for_you": "Neked",
+  "create_new": "Újat készíteni",
+  "months": "hónapok",
+  "usd/months": "USD/hónapok",
+  "sale": "Eladás",
+  "recuring_billing,_cancel_anytime": "A számlázás elszámolása, bármikor törölje",
+  "sale_50%": "Eladás 50%",
+  "get_read_receipt": "Olvassa el a nyugtát",
+  "supper_likes": "A vacsora kedveli",
+  "5_free_supper_like_weekly_": "5 ingyenes vacsora, mint a hetente",
+  "or": "VAGY",
+  "coming_soon": "Hamarosan",
+  "all_too_well_(taylor's_version)": "Túl jól (Taylor verziója)",
+  "taylor_swift": "Taylor Swift",
+  "delete": "TÖRÖL",
+  "get_platinum_package": "Get Platinum Packet",
+  "usd/each": "USD/Mindegyik",
+  "get_gold_package": "Szerezzen aranycsomagot",
+  "search_language": "Keresési nyelv",
+  "please_provide_more_details_about_what_you_are_reporting": "Kérjük, adjon további részleteket arról, hogy mit jelent"
 }
