--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -246,7 +246,7 @@
   "live_at_{nameAddress}": "{nameaddress}에 살고 있습니다.",
   "{numberKilometers}_{unit}_away": "{numberkilometers} {unit} 멀리",
   "verified": "확인",
-  "HeartLink": "하트 링크",
+  "heartLink": "하트 링크",
   "don't_worry_-_we_won't_tell_this_person": "걱정하지 마세요 - 우리는이 사람에게 말하지 않을 것입니다",
   "finding_people_near_you...": "가까운 사람들을 찾는 ...",
   "let's_be_friend": "우리 친구하자",
@@ -292,5 +292,27 @@
   "online_now": "지금 온라인",
   "like": "좋다",
   "nope": "아니요",
-  "supper_like": "저녁 식사와 같은"
+  "supper_like": "저녁 식사와 같은",
+  "add_living": "생활을 추가하십시오",
+  "99+_like": "99+ 좋아요",
+  "for_you": "당신을 위한",
+  "create_new": "새로운 창조",
+  "months": "달",
+  "usd/months": "USD/개월",
+  "sale": "판매",
+  "recuring_billing,_cancel_anytime": "청구되기, 언제든지 취소",
+  "sale_50%": "판매 50%",
+  "get_read_receipt": "읽기 영수증을 받으십시오",
+  "supper_likes": "저녁 식사가 좋아요",
+  "5_free_supper_like_weekly_": "5 주간과 같은 5 개의 무료 저녁",
+  "or": "또는",
+  "coming_soon": "곧 올 것입니다",
+  "all_too_well_(taylor's_version)": "모두 너무 잘 (Taylor의 버전)",
+  "taylor_swift": "테일러 스위프트",
+  "delete": "삭제",
+  "get_platinum_package": "백금 패키지를 얻으십시오",
+  "usd/each": "USD/각각",
+  "get_gold_package": "금 패키지를 받으십시오",
+  "search_language": "검색어",
+  "please_provide_more_details_about_what_you_are_reporting": "보고 한 내용에 대한 자세한 내용을 제공하십시오"
 }
